@@ -1,3 +1,7 @@
+2000-07-01 23:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+   * source\rdd\dbfntx\dbfntx1.c
+     * added a few casts
+
 2000-06-30 08:50 UTC+0100 Ryszard Glab <rglab@imid.med.pl>
 
     *source/vm/garbage.c
